--- a/EmployeeManagementSystem/package.json
+++ b/EmployeeManagementSystem/package.json
@@ -19,6 +19,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "countup.js": "^2.8.0",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
@@ -35,6 +37,7 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.3",
+    "redux-persist": "^6.0.0",
     "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
