--- a/EmployeeManagementSystem/package.json
+++ b/EmployeeManagementSystem/package.json
@@ -27,6 +27,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.6.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
